src/test/ui/match/match-unreachable-warning-with-diverging-discrim.stderr
error: unreachable expression
  --> $DIR/match-unreachable-warning-with-diverging-discrim.rs:5:5
   |
LL |     match (return) { } //~ ERROR unreachable expression
   |     ^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/match-unreachable-warning-with-diverging-discrim.rs:2:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

