src/test/ui/match/match-unreachable-warning-with-diverging-discrim.rs
#![allow(unused_parens)]
#![deny(unreachable_code)]

fn main() {
    match (return) { } //~ ERROR unreachable expression
}
